# MeiliDB

./: Cargo.toml
meilidb-http/: Cargo.toml
meilidb-http/src/: guard.rs  main.rs  option.rs  server.rs
meilidb-http/src/routes/: config.rs  document.rs  health.rs  index.rs  mod.rs  search.rs
meilidb-search/: Cargo.toml
meilidb-search/src/: lib.rs
meilidb/src/database/: mod.rs
src/database/: index.rs  mod.rs
src/database/update/: mod.rs
src/rank/: query_builder.rs
